XIVY-10526 Use LogProvider to get log files